css/main.css
html {
  font-family: sans-serif;
  background-color: #f5f5f5;
  scroll-behavior: smooth;
}

#navbar {
  box-shadow: inset 0px -3px 7px 0px #353e4d;
  background: linear-gradient(to bottom, #293241 5%, #212c41 100%);
  background-color: #293241;
  color: #f2f2f2;
  text-decoration: none;
  overflow: hidden;
  text-align: center;
  z-index: 10;
}

#navbar a {
  display: inline-block;
  color: #f2f2f2;
  text-align: center;
  padding: 1rem;
  text-decoration: none;
}

#navbar a:hover {
  color: black;
  background-color: #98c1d9;
}

.sticky {
  position: fixed;
  top: 0;
  width: 100%;
}

.borderBreak {
  height: 2rem;
  box-shadow: inset 0px -3px 7px 0px rgb(67, 99, 141);
  background: linear-gradient(to bottom, #3d5a80 5%, rgb(51, 84, 126) 100%);
  background-color: #3d5a80;
}

#about {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  position: relative;
  padding: 15rem 0px 10rem;
}

#aboutTitle {
  position: absolute;
  font-weight: bold;
  top: 10rem;
  font-size: 1.5rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
}

#aboutImage {
  display: block;
  height: 200px;
  width: 200px;
  background-color: #3d5a80;
  text-align: center;
  margin: 0 3rem 0 0;
}

#aboutText {
  width: 50%;
  color: rgb(25, 25, 25);
  text-align: left;
  margin-left: 4rem;
  margin-right: 2rem;
  letter-spacing: 0.6px;
  text-align: left;
  display: block;
  font-size: 1.5rem;
}

#projects {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  position: relative;
  padding: 9rem 0px 8rem;
}

#projectsTitle {
  position: absolute;
  font-weight: bold;
  top: 5rem;
  font-size: 1.5rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
}

.currentProjectContainer {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 2rem;
  background-color: #ffffff;
  margin-bottom: 5rem;
  width: 90%;
}

#currentProjectImg {
  display: block;
  width: 50%;
}

#currentProjectText {
  display: block;
  width: 50%;
  margin-left: 2rem;
  color: rgb(25, 25, 25);
  text-align: left;
  letter-spacing: 0.6px;
  font-size: 1.25rem;
}

.projectLinksContainer {
  position: absolute;
  bottom: 5rem;
  text-align: center;
}

.imgWrap {
  display: inline-block;
  position: relative;
  width: 10%;
  margin: 0.2rem;
  border: 1px solid black;
}

.projectLinks {
  position: relative;
  width: 100%;
  transition: 0.3s;
}

.imgDescription {
  position: absolute;
  bottom: 0%;
  left: 0;
  right: 0;
  color: rgb(0, 0, 0);
  visibility: hidden;
  opacity: 0;
  transition: 0.5s;
}

.imgWrap:hover .projectLinks {
  opacity: 0.3;
}

.imgWrap:hover .imgDescription {
  visibility: visible;
  opacity: 1;
  bottom: 50%;
}

#projectsGithubLinkText {
  bottom: 0;
  position: absolute;
  padding: 1rem;
  font-size: 1.15rem;
  text-align: center;
  margin: 1rem;
  width: 90%;
  background-color: #ffffff;
}

#githubLogo {
  height: 4rem;
  width: 4rem;
  background-color: #293241;
  border-radius: 1rem;
  padding: 0.75rem;
  cursor: pointer;
}
#linkedinLogo {
  height: 5.5rem;
  width: 6rem;
  cursor: pointer;
}

li {
  margin-left: 1rem;
}

#contact {
  text-align: center;
}

.iconsContainer {
  margin: 1rem;
}

.logo {
  margin: 1rem;
}

footer {
  height: 2rem;
  line-height: 2rem;
  box-shadow: inset 0px -3px 7px 0px rgb(67, 99, 141);
  background: linear-gradient(to bottom, #3d5a80 5%, rgb(51, 84, 126) 100%);
  background-color: #3d5a80;
  color: #f2f2f2;
  text-decoration: none;
  text-align: center;
}

